apps/frontend/prod/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
  namespace: valuable-promo-prod
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-depl
  template:
    metadata:
      labels:
        app: frontend-depl
    spec:
      containers:
        - name: frontend
          image: ghcr.io/valuable-promo/frontend:v1.3.1 # {"$imagepolicy": "valuable-promo-prod:valuable-promo-frontend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
